# candia-v2

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
examples/: CMakeLists.txt  evolve_dglap.cpp
include/Candia-v2/: AlphaS.hpp  Candia.hpp  Common.hpp  Distribution.hpp  Expression.hpp  FuncArrGrid.hpp  FuncArrayGrid.hpp  Grid.hpp  HPLog.hpp  Math.hpp  OperatorMatrixElements.hpp  SpecialFuncs.hpp  SplittingFn.hpp
res/: config.in
share/cmake/: Config.cmake.in  FindEigen.cmake  clang-libstdc++.cmake  toolchain.cmake
src/: AlphaS.cpp  Candia-thread.cpp  Candia.cpp  Distribution.cpp  Evolution.cpp  EvolutionThread.cpp  Expression.cpp  FuncArrayGrid.cpp  Grid.cpp  HFT.cpp  HPLog.cpp  Latex.cpp  Math.cpp  NewFuncs.cpp  OldFuncs.cpp  OperatorMatrixElements.cpp  RecRel.cpp  SpecialFuncs.cpp  SplittingFns.cpp  SplittingFnsHplog.cpp
src/fortran/: hplog.f  xpij2p.f  xpns2p.f
tests/: CMakeLists.txt
tests/candiav1-comparison/: CMakeLists.txt  comparison.cpp
tests/candiav1-comparison/candiav1/: a02m.f  candia.c  constants.h  hplog.f  partonww.f
tests/candiav1-comparison/candiav2/: candiav2.cpp
tests/cpp-test/: CMakeLists.txt  main.cpp
tests/function-grid/: CMakeLists.txt  function-grid-new.cpp  function-grid.cpp
tests/grid/: CMakeLists.txt  grid.cpp  plot.gplt  script.py
tests/gsl-convolution-test/: CMakeLists.txt  gsl-convolution.cpp
tests/main/: CMakeLists.txt  compare-hoppet.cpp  compare.cpp  evolve.cpp  main.cpp  plot.cpp  plot.gplt  ratio.cpp  read.cpp
tests/main/hplog/: TTT2.m  TTT2_2.m
tests/main/plot-scripts/: plot.gplt  ratio.gplt
tests/main/tex-table/: table-base.txt  table-footer.txt  table-sub-base.txt
tests/plot-generation/: CMakeLists.txt  gen_gluon.gplt  gen_up.gplt  gen_up_candia-v1.gplt  plot-generation.cpp  ratio.gplt
tests/plot-generation/plot-scripts/: main.gplt  ratio.gplt
tests/polymorphism/: main.cpp
tests/splitting-function-test/: CMakeLists.txt  ns2.gplt  ns3.gplt  ps.gplt  ps2.gplt  ps3.gplt  splitting-function-test.cpp
tests/testing/: CMakeLists.txt  testing.cpp
